--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <section>
             <h2>Conteúdo</h2>
             <p>Pagína de exemplo para o curso de ADS.</p>
+            <img src="./assets/images/image.png" style="height: 200px;">
         </section>
     </main>
     <footer>
